subindo logos e mudando alguns nomes para competec

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta name="theme-color" content="#000000">
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-  <link rel="shortcut icon" href="%PUBLIC_URL%/pneumax.png">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/logo-competec.png">
   <!-- <link rel="stylesheet" href="/loader.css"/> -->
 
   <script src="https://www.amcharts.com/lib/3/amcharts.js"></script>
@@ -28,7 +28,7 @@
   <script
     src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places,geometry,drawing&key=AIzaSyA72EHVeUE3qZ4eG6BnHgxgfIWH48dTEDA"></script>
 
-  <title>Continium - ERP ®</title>
+  <title>Competec - ERP ®</title>
 </head>
 <body>
 <noscript>
